--- a/website-portfolio/src/components/NavBar.css
+++ b/website-portfolio/src/components/NavBar.css
@@ -1,5 +1,5 @@
 .navbar {
-  @apply fixed bottom-0 left-0 right-0 z-20 flex justify-start border-t border-slate-900 bg-black;
+  @apply fixed bottom-0 left-0 right-0 z-20 flex justify-start border-t border-slate-900 bg-[#12161d];
 }
 
 .navbar-list {
@@ -15,7 +15,7 @@
 }
 
 .navbar-link--inactive {
-  @apply bg-black hover:bg-slate-900;
+  @apply bg-[#12161d] hover:bg-slate-900;
 }
 
 .navbar-link--active {
