--- a/src/pages/DurationPage.css
+++ b/src/pages/DurationPage.css
@@ -53,10 +53,10 @@
 }
 
 .duration-page__cutsSlot {
-  @apply flex min-h-0;
+  @apply flex min-h-0 self-start;
   width: min(100%, 20rem);
-  height: clamp(22rem, 42vh, 25rem);
-  max-height: 25rem;
+  height: auto;
+  max-height: none;
 }
 
 .duration-page__curveSlot .yield-curve,
@@ -72,7 +72,7 @@
 .duration-page__cutsSlot .quartly-cuts {
   width: 100%;
   max-width: 20rem;
-  height: 100%;
+  height: auto;
 }
 
 .duration-page__ratesSlot .rates-yield {
@@ -121,8 +121,8 @@
 
   .duration-page__cutsSlot {
     width: min(100%, 20rem);
-    height: 24rem;
-    max-height: 24rem;
+    height: auto;
+    max-height: none;
   }
 
   .duration-page__curveSlot .yield-curve,
@@ -136,7 +136,7 @@
 
   .duration-page__cutsSlot .quartly-cuts {
     width: min(100%, 20rem);
-    height: 100%;
+    height: auto;
   }
 }
 
@@ -169,8 +169,8 @@
 
   .duration-page__cutsSlot {
     width: 100%;
-    height: 18rem;
-    max-height: 18rem;
+    height: auto;
+    max-height: none;
   }
 
   .duration-page__curveSlot .yield-curve,
@@ -182,7 +182,7 @@
 
   .duration-page__cutsSlot .quartly-cuts {
     width: min(100%, 26rem);
-    height: 100%;
+    height: auto;
   }
 
   .duration-page__ratesSlot .rates-yield {
